[FIX] web: colorpicker: correctly align colors
Steps to reproduce:
- Go to the html_editor (via Project for example)
- Select a text and open the colorpicker

Current Behaviour
The first line of colors is misaligned with next lines.

Expected
The first line of colors is aligned with next lines.

Also, note that it fixes the colors' selector shape on touch devices and
keyboard navigation can go from one line to the next/previous using
right/left arrow keys (in the same section).

closes odoo/odoo#216081

--- a/addons/web/static/src/core/color_picker/color_picker.scss
+++ b/addons/web/static/src/core/color_picker/color_picker.scss
@@ -22,7 +22,6 @@
 .o_color_button {
     width: 23px;
     height: 22px;
-    padding: 0px;
     box-shadow: inset 0 0 0 1px rgba(var(--border-rgb), .5);
     margin: 0.5px;
 
@@ -57,8 +56,14 @@
 
 .o_font_color_selector .o_colorpicker_section {
     margin-bottom: 3px;
-    width: fit-content;
-    margin-left: 2px;
+}
+
+.o_font_color_selector {
+    --o-color-picker-grid-columns: 8;
+    .o_colorpicker_section, .o_color_section {
+        display: grid;
+        grid-template-columns: repeat(var(--o-color-picker-grid-columns), 1fr);
+    }
 }
 
 .o_font_color_selector {
@@ -142,6 +147,7 @@
     }
 }
 .o_font_color_selector .o_colorpicker_widget {
+    width: 100%;
     .o_hex_input {
         border: 1px solid !important;
         padding: 0 2px !important;
